[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sundown"
version = "0.1.0"
description = "Screen color temperature adjustment for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astral>=3.2",
]

[project.scripts]
sundown = "sundown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sundown"]
