[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sundown"
version = "0.1.0"
description = "Screen color temperature adjustment for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astral>=3.2",
    "pgeocode>=0.5.0",
    "timezonefinder>=8.2.0",
]

[project.scripts]
sundown = "sundown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sundown"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
